# SofaTearing

./: CMakeLists.txt  README.md
example/: TearTest.scn  TearTest.scn.qglviewer.view
src/: TearPlugin.cpp  TearPlugin.h  TearPlugin.inl  config.h  initTearPlugin.cpp
src/MyAwesomeComponents/: FanForceField.h  FanForceField.inl
